# curveture

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/curve/: Color.hpp
include/curve/sdl/: Renderer.hpp  Surface.hpp  Texture.hpp  Window.hpp
src/: CMakeLists.txt  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp  main.cpp
test/: CMakeLists.txt  test_runner.cpp
